--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.88.16",
+    "@react-three/fiber": "^8.15.11",
+    "@types/three": "^0.158.2",
+    "framer-motion": "^10.16.5",
+    "framer-motion-3d": "^10.16.5",
     "gsap": "^3.12.2",
     "next": "14.0.3",
     "react": "^18",
