--- a/package.json
+++ b/package.json
@@ -9,26 +9,37 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-three/drei": "^9.88.16",
-    "@react-three/fiber": "^8.15.11",
-    "@types/three": "^0.158.2",
-    "framer-motion": "^10.16.5",
-    "framer-motion-3d": "^10.16.5",
-    "gsap": "^3.12.2",
-    "next": "14.0.3",
-    "react": "^18",
-    "react-dom": "^18",
-    "sass": "^1.69.5"
+    "@grcmichael/gscroll": "^1.0.15",
+    "@gsap/react": "^2.0.1",
+    "@lottiefiles/react-lottie-player": "^3.5.3",
+    "@preact/signals-core": "^1.5.1",
+    "framer-motion": "^10.18.0",
+    "framer-motion-3d": "^10.18.0",
+    "gsap": "^3.12.5",
+    "gsap-trial": "^3.12.5",
+    "lottie-react": "^2.4.0",
+    "next": "14.1.0",
+    "nodemailer": "^6.9.10",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
+    "react-lottie": "^1.2.4",
+    "react-toastify": "^9.1.3",
+    "sass": "^1.71.1"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "@types/node": "^20.11.21",
+    "@types/nodemailer": "^6.4.14",
+    "@types/react": "^18.2.60",
+    "@types/react-dom": "^18.2.19",
+    "@types/react-lottie": "^1.2.10",
+    "autoprefixer": "^10.4.17",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.1.0",
+    "gscroll": "link:@types/grcmichael/gscroll",
+    "json-loader": "^0.5.7",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
   }
 }
