--- a/package.json
+++ b/package.json
@@ -9,14 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@grcmichael/gscroll": "^1.0.15",
-    "@gsap/react": "^2.0.1",
+    "@gsap/react": "2.1.1",
     "@lottiefiles/react-lottie-player": "^3.5.3",
     "@preact/signals-core": "^1.5.1",
     "framer-motion": "^10.18.0",
     "framer-motion-3d": "^10.18.0",
-    "gsap": "^3.12.5",
-    "gsap-trial": "^3.12.5",
+    "gsap": "3.12.5",
+    "gsap-trial": "3.12.5",
     "lottie-react": "^2.4.0",
     "next": "14.1.0",
     "nodemailer": "^6.9.10",
@@ -25,7 +24,8 @@
     "react-icons": "^4.12.0",
     "react-lottie": "^1.2.4",
     "react-toastify": "^9.1.3",
-    "sass": "^1.71.1"
+    "sass": "^1.71.1",
+    "split-type": "^0.3.4"
   },
   "devDependencies": {
     "@types/node": "^20.11.21",
@@ -36,7 +36,6 @@
     "autoprefixer": "^10.4.17",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.1.0",
-    "gscroll": "link:@types/grcmichael/gscroll",
     "json-loader": "^0.5.7",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
