--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-lottie": "^1.2.4",
     "react-toastify": "^9.1.3",
     "sass": "^1.71.1",
+    "sharp": "^0.33.5",
     "split-type": "^0.3.4"
   },
   "devDependencies": {
